[package]
name = "classic-bitfield"
version = "0.1.0"
edition = "2021"
license = "GPL-3"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_deref = "1.1.1"
quote = "1.0.23"

[dependencies.syn]
version = "1.0.107"
features = ["full"]