[package]
name = "classic-bitfield"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0"
authors = ["D. Scott Boggs <scott+cargo@tams.tech"]
repository = "https://github.com/dscottboggs/rust-classic-bitfield"
description = "A bitfield enum with a classic feel"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_deref = "1.1.1"
heck = "0.4.0"
quote = "1.0.23"

[dependencies.syn]
version = "1.0.107"
features = ["full"]

[features]
serde = []