[package]
name = "classic-bitfield-test"
version = "0.1.0"
edition = "2021"

[dependencies]
static_assertions = "1.1.0"
serde = "1.0.152"
serde_json = "1.0.91"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.classic-bitfield]
path = ".."

[features]
serde-as-number = ["classic-bitfield/serde-as-number"]
serde-as-names = ["classic-bitfield/serde-as-names"]
default = ["serde-as-names"]